--- a/src/components/Pokemon/Pokemon.css
+++ b/src/components/Pokemon/Pokemon.css
@@ -10,42 +10,74 @@
     color: #000;
 }
 
-.electric {
-    background-color: yellow;
-}
-
-.grass {
-    background-color: green;
-}
-
-.poison {
-    background-color: purple;
-}
-
-.fire {
-    background-color: red;
-}
-
 .normal {
-    background-color: grey;
+    background-color: #A8A878;
 }
 
 .fighting {
-    background-color: orange;
+    background-color: #C03028;
 }
 
 .flying {
-    background-color: lightblue;
+    background-color: #A890F0;
+}
+
+.poison {
+    background-color: #A040A0;
 }
 
 .ground {
-    background-color: goldenrod;
+    background-color: #E0C068;
 }
 
 .rock {
-    background-color: rosybrown;
+    background-color: #B8A038;
 }
 
 .bug {
-    background-color: lawngreen;
+    background-color: #A8B820;
+}
+
+.ghost {
+    background-color: #705898;
+}
+
+.steel {
+    background-color: #B8B8D0;
+}
+
+.fire {
+    background-color: #F08030;
+}
+
+.water {
+    background-color: #6890F0;
+}
+
+.grass {
+    background-color: #78C850;
+}
+
+.electric {
+    background-color: #F8D030;
+}
+
+.psychic {
+    background-color: #F85888;
+}
+
+.ice {
+    background-color: #98D8D8;
+}
+
+.dragon {
+    background-color: #7038F8;
+}
+
+.dark {
+    background-color: #705848;
+}
+
+.fairy {
+    background-color: #EE99AC;
 }
