--- a/src/components/Pagination/Pagination.css
+++ b/src/components/Pagination/Pagination.css
@@ -1,5 +1,6 @@
 button {
-    margin: 0 1rem;
+    border-radius: 0 !important;
+    margin-right: 1rem;
     font-size: 0.9rem;
     font-family: 'Press Start 2P', cursive;
 }
